# simulator

./: CMakeLists.txt  package.xml
include/tiburon_simulator/buoyancy/: buoyancy.hh
launch/: simulator.launch
model/tiburon_bot_final/: model.sdf
src/buoyancy_plugin/: buoyancy.cc
src/imu_plugin/: imu.cc
src/thruster_plugin/: thruster.cpp
worlds/: simulator.world
